--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="allbody mx-auto" style="width: 1024px">
             <nav class="header navbar navbar-expand-lg navbar-light bg-dark">
-                <div class="container-fluid">
+                <div class="container">
                     <a class="navbar-brand text-white" href="#">高雄市旅遊網</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -38,16 +38,12 @@
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./img/Hero.png" class="d-block w-100" alt="..." />
+                            <img src="./img/Hero.png" class="d-block img-fluid" alt="..." />
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="text-white fw-bolder fz-40 pb-80">高雄旅遊資訊</div>
                                 <div class="pb-50 pr-30">
-                                    <select class="bg-lighter text-center fw-bold list">
+                                    <select class="bg-lighter text-center fw-bold list seletBtn" id="seletvalue">
                                         <option value="請選擇行政區">--請選擇行政區--</option>
-                                        <!-- <option value="苓雅區">苓雅區</option>
-                                        <option value="三民區">三民區</option>
-                                        <option value="新興區">新興區</option>
-                                        <option value="鹽埕區">鹽埕區</option> -->
                                     </select>
                                 </div>
                                 <div class="bg-lighter2 d-flex justify-content-around align-items-center">
@@ -68,34 +64,107 @@
                     <i class="fa-solid fa-circle-down fasize pt-28 icon"></i>
                     <div class="line"></div>
                 </div>
-                <div class="d-flex justify-content-center middleName">三民區</div>
-                <div class="row justify-content-around">
-                    <div class="col-5 card">
-                        <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%96%B0%E5%AE%A2%E5%AE%B6%E6%96%87%E7%89%A9%E5%9C%92%E5%8D%8002.jpg" alt="" />
-                        <div class="row mt-2">
-                            <div class="col-1">
-                                <img src="./img/icons_clock.png" class="clock" alt="" />
-                                <img src="./img/icons_pin.png" alt="" />
-                                <img src="./img/icons_phone.png" alt="" class="phone" />
+                <div class="d-flex justify-content-center middleName"></div>
+                <div class="row justify-content-evenly mt-3">
+                    <div class="col-md-5">
+                        <div class="card">
+                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E4%B8%AD%E9%83%BD%E6%BF%95%E5%9C%B0%E5%85%AC%E5%9C%9207.jpg" class="card-img-top img-fluid" alt="..." />
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img src="./img/icons_clock.png" class="clock" alt="" />
+                                        <img src="./img/icons_pin.png" alt="" />
+                                        <img src="./img/icons_phone.png" alt="" class="phone" />
+                                    </div>
+                                    <div class="col-11">
+                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
+                                        <div class="">高雄市三民區建國二路318號</div>
+                                        <div class="">886-7-2363357</div>
+                                    </div>
+                                    <div class="d-flex justify-content-end">
+                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
+                                        <div class="">免費參觀</div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-11">
-                                <div class="">週二至週日10:00-18:00，每周一公休</div>
-                                <div class="">高雄市三民區建國二路318號</div>
-                                <div class="">886-7-2363357</div>
-                            </div>
-                        </div>
-                        <div class="d-flex justify-content-end">
-                            <img src="./img/icons_tag.png" alt="" class="me-2" />
-                            <div class="">免費參觀</div>
                         </div>
                     </div>
-                    <div class="col-5 card">
-                        <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E7%BE%8E%E6%BF%83%E5%8D%80/%E7%AB%B9%E5%AD%90%E9%96%80%E7%99%BC%E9%9B%BB%E5%BB%A0.jpg" alt="" />
+                    <div class="col-md-5">
+                        <div class="card">
+                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%96%B0%E5%AE%A2%E5%AE%B6%E6%96%87%E7%89%A9%E5%9C%92%E5%8D%8002.jpg" class="card-img-top img-fluid" alt="..." />
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img src="./img/icons_clock.png" class="clock" alt="" />
+                                        <img src="./img/icons_pin.png" alt="" />
+                                        <img src="./img/icons_phone.png" alt="" class="phone" />
+                                    </div>
+                                    <div class="col-11">
+                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
+                                        <div class="">高雄市三民區建國二路318號</div>
+                                        <div class="">886-7-2363357</div>
+                                    </div>
+                                    <div class="d-flex justify-content-end">
+                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
+                                        <div class="">免費參觀</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 mt-3">
+                        <div class="card">
+                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%AA%A8%E4%BB%94%E6%9E%97%E5%9F%A4%E6%BF%95%E5%9C%B0%E5%85%AC%E5%9C%9201.jpg" class="card-img-top img-fluid" alt="..." />
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img src="./img/icons_clock.png" class="clock" alt="" />
+                                        <img src="./img/icons_pin.png" alt="" />
+                                        <img src="./img/icons_phone.png" alt="" class="phone" />
+                                    </div>
+                                    <div class="col-11">
+                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
+                                        <div class="">高雄市三民區建國二路318號</div>
+                                        <div class="">886-7-2363357</div>
+                                    </div>
+                                    <div class="d-flex justify-content-end">
+                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
+                                        <div class="">免費參觀</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 mt-3">
+                        <div class="card">
+                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%84%9B%E6%B2%B3%E4%B9%8B%E5%BF%83%E7%85%A7-%E5%A4%9C%E6%99%9A.jpg" class="card-img-top img-fluid" alt="..." />
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-1">
+                                        <img src="./img/icons_clock.png" class="clock" alt="" />
+                                        <img src="./img/icons_pin.png" alt="" />
+                                        <img src="./img/icons_phone.png" alt="" class="phone" />
+                                    </div>
+                                    <div class="col-11">
+                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
+                                        <div class="">高雄市三民區建國二路318號</div>
+                                        <div class="">886-7-2363357</div>
+                                    </div>
+                                    <div class="d-flex justify-content-end">
+                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
+                                        <div class="">免費參觀</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer">
+        <div class="position-relative">
+            <a href=""><img src="img/btn_goTop.png" class="position-absolute "></a>
+        </div>
+        <div class="footer mt-3">
             <div class="d-flex justify-content-center">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
@@ -115,10 +184,10 @@
                     </ul>
                 </nav>
             </div>
-            <div class="bg-blue justify-content-center">
-                <div class="text-white fw-bold text-center pt-2">高雄旅遊網</div>
-                <div class="text-warning fw-bold text-center mt-2">資料來源:高雄市政府</div>
-            </div>
+        </div>
+        <div class="bg-blue justify-content-center">
+            <div class="text-white fw-bold text-center pt-2">高雄旅遊網</div>
+            <div class="text-warning fw-bold text-center mt-2">資料來源:高雄市政府</div>
         </div>
         <script src="./all.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
