--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <i class="fa-solid fa-circle-down fasize pt-28 icon"></i>
                     <div class="line"></div>
                 </div>
-                <div class="d-flex justify-content-center middleName"></div>
-                <div class="row justify-content-evenly mt-3">
+                <div class="d-flex justify-content-center"></div>
+                <div class="row justify-content-evenly mt-3" id="middlebody">
                     <div class="col-md-5">
                         <div class="card">
                             <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E4%B8%AD%E9%83%BD%E6%BF%95%E5%9C%B0%E5%85%AC%E5%9C%9207.jpg" class="card-img-top img-fluid" alt="..." />
@@ -112,57 +112,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5 mt-3">
-                        <div class="card">
-                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%AA%A8%E4%BB%94%E6%9E%97%E5%9F%A4%E6%BF%95%E5%9C%B0%E5%85%AC%E5%9C%9201.jpg" class="card-img-top img-fluid" alt="..." />
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <img src="./img/icons_clock.png" class="clock" alt="" />
-                                        <img src="./img/icons_pin.png" alt="" />
-                                        <img src="./img/icons_phone.png" alt="" class="phone" />
-                                    </div>
-                                    <div class="col-11">
-                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
-                                        <div class="">高雄市三民區建國二路318號</div>
-                                        <div class="">886-7-2363357</div>
-                                    </div>
-                                    <div class="d-flex justify-content-end">
-                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
-                                        <div class="">免費參觀</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-5 mt-3">
-                        <div class="card">
-                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E6%84%9B%E6%B2%B3%E4%B9%8B%E5%BF%83%E7%85%A7-%E5%A4%9C%E6%99%9A.jpg" class="card-img-top img-fluid" alt="..." />
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <img src="./img/icons_clock.png" class="clock" alt="" />
-                                        <img src="./img/icons_pin.png" alt="" />
-                                        <img src="./img/icons_phone.png" alt="" class="phone" />
-                                    </div>
-                                    <div class="col-11">
-                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
-                                        <div class="">高雄市三民區建國二路318號</div>
-                                        <div class="">886-7-2363357</div>
-                                    </div>
-                                    <div class="d-flex justify-content-end">
-                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
-                                        <div class="">免費參觀</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="position-relative">
-            <a href=""><img src="img/btn_goTop.png" class="position-absolute "></a>
+            <a href=""><img src="img/btn_goTop.png" class="position-absolute" /></a>
         </div>
         <div class="footer mt-3">
             <div class="d-flex justify-content-center">
