--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                                 <div class="bg-lighter2 d-flex justify-content-around align-items-center">
                                     <div class="text-dark fw-bolder pb-10 mt-5">熱門行政區</div>
                                     <button type="button" class="btn btn-purple btn-size text-white LingyaBtn">苓雅區</button>
-                                    <button type="button" class="btn btn-skin btn-size text-white">三民區</button>
-                                    <button type="button" class="btn btn-warning btn-size text-white">新興區</button>
-                                    <button type="button" class="btn btn-blue btn-size text-white">鹽埕區</button>
+                                    <button type="button" class="btn btn-skin btn-size text-white Sanmin">三民區</button>
+                                    <button type="button" class="btn btn-warning btn-size text-white Xinxing">新興區</button>
+                                    <button type="button" class="btn btn-blue btn-size text-white salt">鹽埕區</button>
                                 </div>
                             </div>
                         </div>
@@ -68,23 +68,24 @@
                 <div class="row justify-content-evenly mt-3" id="middlebody">
                     <div class="col-md-5">
                         <div class="card">
-                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E4%B8%89%E6%B0%91%E5%8D%80/%E4%B8%AD%E9%83%BD%E6%BF%95%E5%9C%B0%E5%85%AC%E5%9C%9207.jpg" class="card-img-top img-fluid" alt="..." />
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-1">
-                                        <img src="./img/icons_clock.png" class="clock" alt="" />
-                                        <img src="./img/icons_pin.png" alt="" />
-                                        <img src="./img/icons_phone.png" alt="" class="phone" />
-                                    </div>
-                                    <div class="col-11">
-                                        <div class="">週二至週日10:00-18:00，每周一公休</div>
-                                        <div class="">高雄市三民區建國二路318號</div>
-                                        <div class="">886-7-2363357</div>
-                                    </div>
-                                    <div class="d-flex justify-content-end">
-                                        <img src="./img/icons_tag.png" alt="" class="me-2" />
-                                        <div class="">免費參觀</div>
-                                    </div>
+                            <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E7%BE%8E%E6%BF%83%E5%8D%80/%E7%BE%8E%E6%BF%83%E6%95%AC%E5%AD%97%E4%BA%AD.jpg" style="max-height: 275px" class="card-img-top img-fluid position-relative" alt="..." />
+                            <div class="position-absolute bottom-0 start-0 fw-bold ps-2 pb-2">三民區</div>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-1">
+                                    <img src="./img/icons_clock.png" class="clock" alt="" />
+                                    <img src="./img/icons_pin.png" alt="" />
+                                    <img src="./img/icons_phone.png" alt="" class="phone" />
+                                </div>
+                                <div class="col-11">
+                                    <div class="">週二至週日10:00-18:00，每周一公休</div>
+                                    <div class="">高雄市三民區建國二路318號</div>
+                                    <div class="">886-7-2363357</div>
+                                </div>
+                                <div class="d-flex justify-content-end">
+                                    <img src="./img/icons_tag.png" alt="" class="me-2" />
+                                    <div class="">免費參觀</div>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +107,7 @@
                                     </div>
                                     <div class="d-flex justify-content-end">
                                         <img src="./img/icons_tag.png" alt="" class="me-2" />
-                                        <div class="">免費參觀</div>
+                                        <div class="me-5">免費參觀</div>
                                     </div>
                                 </div>
                             </div>
