--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                                 </div>
                                 <div class="bg-lighter2 d-flex justify-content-around align-items-center">
                                     <div class="text-dark fw-bolder pb-10 mt-5">熱門行政區</div>
-                                    <button type="button" class="btn btn-purple btn-size text-white LingyaBtn">苓雅區</button>
-                                    <button type="button" class="btn btn-skin btn-size text-white Sanmin">三民區</button>
-                                    <button type="button" class="btn btn-warning btn-size text-white Xinxing">新興區</button>
-                                    <button type="button" class="btn btn-blue btn-size text-white salt">鹽埕區</button>
+                                    <button type="button" class="btn btn-purple btn-size text-white" id="LingyaBtn">苓雅區</button>
+                                    <button type="button" class="btn btn-skin btn-size text-white" id="Sanmin">三民區</button>
+                                    <button type="button" class="btn btn-warning btn-size text-white" id="Jiaxian">甲仙區</button>
+                                    <button type="button" class="btn btn-blue btn-size text-white" id="Bigtree">大樹區</button>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="d-flex justify-content-center"></div>
                 <div class="row justify-content-evenly mt-3" id="middlebody">
-                    <div class="col-md-5">
+                    <!-- <div class="col-md-5">
                         <div class="card">
                             <img src="https://raw.githubusercontent.com/hexschool/KCGTravel/master/image/%E7%BE%8E%E6%BF%83%E5%8D%80/%E7%BE%8E%E6%BF%83%E6%95%AC%E5%AD%97%E4%BA%AD.jpg" style="max-height: 275px" class="card-img-top img-fluid position-relative" alt="..." />
                             <div class="position-absolute bottom-0 start-0 fw-bold ps-2 pb-2">三民區</div>
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
